feat: add notification service
